[project]
name = "radiomics-extraction"
version = "0.1.0"
description = "PyRadiomics feature extraction matching the I3LUNG/MIRP preprocessing pipeline"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pandas>=1.5.0,<2.0",
    "numpy>=1.21.0,<1.24",
    "SimpleITK>=2.0.0",
    "pyradiomics==3.0.1",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
]

[project.scripts]
radiomics-extraction = "rad_extraction.extract_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rad_extraction"]

# ── uv settings ──────────────────────────────────────────────────────────────
# pyradiomics 3.0.1 has C extensions that need numpy + setuptools at build time.
# This tells uv to provide them when building the wheel from sdist.
[tool.uv]
# Prefer binary wheels to avoid build issues
no-build-isolation-package = []

[[tool.uv.dependency-metadata]]
name = "pyradiomics"
version = "3.0.1"
requires-dist = ["numpy>=1.21.0,<1.24", "SimpleITK>=2.0.0", "six>=1.10"]

[tool.uv.pip]
# Install numpy before pyradiomics to ensure it's available at build time
no-build-isolation = false
