[project]
name = "radiomics-extraction"
version = "0.1.0"
description = "PyRadiomics feature extraction matching the I3LUNG/MIRP preprocessing pipeline"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pandas>=1.5.0,<2.0",
    "numpy>=1.21.0,<1.24",
    "SimpleITK>=2.0.0",
    "pyradiomics==3.0.1",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
]

[project.scripts]
radiomics-extraction = "rad_extraction.extract_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rad_extraction"]

# pyradiomics 3.0.1 has C extensions that import numpy in setup.py
# but doesn't declare it as a build dependency — tell uv to provide it
[tool.uv.extra-build-dependencies]
pyradiomics = ["numpy", "setuptools"]
