[project]
name = "radiomics-extraction"
version = "0.1.0"
description = "PyRadiomics feature extraction matching the I3LUNG/MIRP preprocessing pipeline"
requires-python = ">=3.9,<3.10"
dependencies = [
    "pandas>=1.5.0,<2.0",
    "numpy==1.23.0",
    "SimpleITK==2.4.1",
    "pyradiomics==3.1.0",
    "PyWavelets==1.6.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
]

[project.scripts]
radiomics-extraction = "rad_extraction.extract_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rad_extraction"]

# pyradiomics 3.1.0 imports numpy in setup.py but doesn't declare it
# as a build dependency — tell uv to inject it into the build env
[tool.uv.extra-build-dependencies]
pyradiomics = ["numpy==1.23.0", "setuptools"]
