[project]
name = "fm-extraction"
version = "0.1.0"
requires-python = ">=3.8,<3.11" 
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "SimpleITK",
    "foundation-cancer-image-biomarker",
]

[project.scripts]
fm-extraction = "fm_extraction.extract_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fm_extraction"]

[tool.uv]
prerelease = "allow"
