[project]
name = "radiomics-extraction"
version = "0.1.0"
requires-python = ">=3.8,<3.11"
dependencies = [
    "pandas",
    "numpy",
    "SimpleITK",
    "pyradiomics",
]

[project.scripts]
radiomics-extraction = "radiomics_extraction_pkg.extract_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radiomics_extraction_pkg"]
